Closed Bug 1297647 Opened 9 years ago Closed 8 years ago

Misleading indentation in nsMaiHyperLink.cpp

Categories

(Core :: Disability Access APIs, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: nical, Assigned: Cykesiopka)

References

Details

Attachments

(1 file)

Blocks: 1297639
I assume Alex knows more about this.
Component: Disability Access → Disability Access APIs
Flags: needinfo?(surkov.alexander)
Product: Firefox → Core
(In reply to Nicolas Silva [:nical] from comment #0) > Here: > http://searchfox.org/mozilla-central/rev/ > b38dbd1378cea4ae83bbc8a834cdccd02bbc5347/accessible/atk/nsMaiHyperlink. > cpp#191 > > This if block needs to be braced. It is most likely a bug. its correct, just baddly indented. I'm not sure if this is from me sucking at indentation or the time when it was using 4 space indents, but either way it just needs some whitespace fixup. (In reply to :Gijs Kruitbosch from comment #1) > I assume Alex knows more about this. actually atk/ is me.
Flags: needinfo?(surkov.alexander)
nical: Apologies if you already had a patch for this. This is blocking me from using GCC6 and --enable-warnings-as-errors, so I wanted to fix it sooner rather than later.
Assignee: nobody → cykesiopka.bmo
Status: NEW → ASSIGNED
Attachment #8786706 - Flags: review?(tbsaunde+mozbugs) → review+
Pushed by ryanvm@gmail.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/448e4062cba4 Fix misleading indentation in nsMaiHyperLink.cpp. r=tbsaunde
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: