Bug 1297647 - Fix misleading indentation in nsMaiHyperLink.cpp. r=tbsaunde

MozReview-Commit-ID: 3CG7EwfIEkT